--- a/app/src/main/res/layout/activity_orderdetails.xml
+++ b/app/src/main/res/layout/activity_orderdetails.xml
@@ -64,7 +64,7 @@
                 android:layout_marginTop="15dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Order ID" />
+                android:text="Order ID  :" />
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
@@ -73,7 +73,7 @@
                 android:layout_marginTop="45dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Quantity" />
+                android:text="Quantity  :" />
             <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
             android:layout_marginTop="75dp"
             android:textColor="#000000"
             android:textSize="18sp"
-            android:text="Total Order Price" />
+            android:text="Total Order Price  :" />
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                 android:layout_marginTop="105dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Enterprise Name" />
+                android:text="Enterprise Name  :" />
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
@@ -100,7 +100,7 @@
                 android:layout_marginTop="135dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Breakfast Item List" />
+                android:text="Breakfast Item List  :" />
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="165dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Lunch Item List" />
+                android:text="Lunch Item List  :" />
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
@@ -118,7 +118,7 @@
                 android:layout_marginTop="195dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Dinner Item List" />
+                android:text="Dinner Item List  :" />
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
                 android:layout_marginTop="225dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Snacks Item List" />
+                android:text="Snacks Item List  :" />
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
@@ -136,7 +136,7 @@
                 android:layout_marginTop="255dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Created Date-Time" />
+                android:text="Created Date-Time  :" />
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
@@ -145,7 +145,7 @@
                 android:layout_marginTop="285dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Delivery Address" />
+                android:text="Delivery Address  :" />
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
@@ -154,7 +154,7 @@
                 android:layout_marginTop="315dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:text="Order Status" />
+                android:text="Order Status  :" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
