--- a/app/src/main/res/layout/activity_orderdetails.xml
+++ b/app/src/main/res/layout/activity_orderdetails.xml
@@ -159,7 +159,7 @@
 
         <LinearLayout
             android:layout_width="360dp"
-            android:layout_height="100dp"
+            android:layout_height="130dp"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:orientation="vertical">
@@ -174,6 +174,18 @@
                 android:elevation="50dp"
                 android:background="#FF0000"
                 android:textColor="#FFFFFF"/>
+
+            <Button
+                android:id="@+id/order_now_vieworderlist"
+                android:layout_width="110dp"
+                android:layout_height="50dp"
+                android:text="View Orders"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:elevation="50dp"
+                android:background="#FF0000"
+                android:textColor="#FFFFFF"
+                />
 
         </LinearLayout>
 
