--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -27,14 +27,13 @@
             android:layout_marginTop="30dp"
             app:cardBackgroundColor="#FF0000">
             <ImageView
-                android:id="@+id/imageback2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="35dp"
-                android:layout_marginTop="16dp"
-                android:background="#FF0000"
-                android:src="@drawable/abc_vector_test"/>
+                android:id="@+id/logout"
+                android:layout_width="63dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_exit" />
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
