--- a/app/src/main/res/layout/activity_orderdetails.xml
+++ b/app/src/main/res/layout/activity_orderdetails.xml
@@ -62,9 +62,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
+                android:text="Order ID  :"
                 android:textColor="#000000"
-                android:textSize="18sp"
-                android:text="Order ID  :" />
+                android:textSize="18sp" />
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
